--- a/TO-DO-APP-page1.html
+++ b/TO-DO-APP-page1.html
@@ -4,48 +4,53 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<meta http-equiv="X-UA-Compatible", content="ie=edge">
-	<link rel="icon" href="./html.png">
-	<link rel="stylesheet" href="../Styles/Assignment2-page1.css">
-
-	
+	<link rel="stylesheet" href="../TO-DO-APP-UI/page1.css">
+	<link rel="icon" href="https://xd.adobe.com/static/images/xd_android_webclip_192-f68ab947e37c09acf69cea3122e60893bcc15cb4.png">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 	<title>ToDo List-UX</title>
 </head>
 <body>
 <div class="container">
-	<div class="Bold-tasks">Tasks</div>
-	<div class="Lighter-lists">Lists</div>
-	<button class="Add-symbol" >+</button>
-	<div class="Add-list">Add List</div>
+	<div class="heading-container">
+		<div class="bold-tasks">Tasks&nbsp; </div>
+		<div class="lighter-lists"> Lists</div>
+		<button class="add-symbol" >&#43;</button>
+		<div class="add-list">Add List</div>
+	</div>
 	<div class="task-list-container">
-		<div class="Task-details-container">
+		<div class="task-details-container">
 				<div class="task-name-container">
-					<div class="Task-name">Trip to Paris</div>
-					<hr>
+					<div class="task-name">Trip to Paris</div>
+					<hr class="h-line">
 				</div>
-				<div class="Task-completion">completed task</div>
-				<input type="checkbox">
-				<label> Pending task</label>
+				<div class="task-completion">completed task</div>
+				<div class="task-pending">
+					<input type="checkbox" >
+					<label> Pending task</label>
+				</div>
 		</div>
-		<div class="Task-details-container">
+		<div class="task-details-container">
 				<div class="task-name-container">
-					<div class="Task-name">My Todo list</div>
-					<hr>
+					<div class="task-name">My Todo list</div>
+					<hr class="h-line">
 				</div>
-				<div class="Task-completion">completed task</div>
-				<input type="checkbox">
-				<label> Pending task</label>
+				<div class="task-completion">completed task</div>
+				<div class="task-pending">
+					<input type="checkbox" >
+					<label> Pending task</label>
+				</div>
 		</div>
-		<div class="Task-details-container">
+		<div class="task-details-container">
 				<div class="task-name-container">
-					<div class="Task-name">My Todo list</div>
-					<hr>
+					<div class="task-name">My Todo list</div>
+					<hr class="h-line">
 				</div>
-				<div class="Task-completion">completed task</div>
-				<input type="checkbox">
-				<label> Pending task</label>
-		</div>
-		
-		
+				<div class="task-completion">completed task</div>
+				<div class="task-pending">
+					<input type="checkbox" >
+					<label> Pending task</label>
+				</div>
+		</div>	
 </div>
 </body>
 </html>
