--- a/TO-DO-APP-page2.html
+++ b/TO-DO-APP-page2.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<meta http-equiv="X-UA-Compatible", content="ie=edge">
-	<link rel="icon" href="./html.png">
-	<link rel="stylesheet" href="../Styles/Assignment2-page2.css">
+	<link rel="stylesheet" href="../TO-DO-APP-UI/page2.css">
+	<link rel="icon" href="https://xd.adobe.com/static/images/xd_android_webclip_192-f68ab947e37c09acf69cea3122e60893bcc15cb4.png">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 	<title>ToDo List-UX</title>
 </head>
 <body>
@@ -14,11 +15,12 @@
 		<div class="hline-left"><hr></div>
 		<h1 class="heading">Trip to Paris</h1>
 		<div class="hline-right"><hr></div>
+		<div class="back-button-box">
+			<button class="back-button">&#10229;</button>
+			<div class="back-button-text">Back</div>
+		</div>
 	</div>
-	<div class="back-button-box">
-		<button class="back-button">&#10229;</button>
-		<div class="back-button-text">Back</div>
-	</div>
+	
 	<div class="task-list-container">
 		<div class="task-details-container">
 				<div class="task-name-container">
