--- a/TO-DO-APP-page3.html
+++ b/TO-DO-APP-page3.html
@@ -4,18 +4,61 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<meta http-equiv="X-UA-Compatible", content="ie=edge">
-	<link rel="icon" href="./html.png">
-	<link rel="stylesheet" href="../Styles/Assignment2-page3.css">
-
+	<link rel="stylesheet" href="../TO-DO-APP-UI/page3.css">
+	<link rel="icon" href="https://xd.adobe.com/static/images/xd_android_webclip_192-f68ab947e37c09acf69cea3122e60893bcc15cb4.png">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 	
 	<title>ToDo List-UX</title>
 </head>
 <body>
-	<div class="background-fill"></div>
-		<div class="add-task-container">
-			<div class="new-list"> Add New List</div>
-			<input type="text">
-			<div class="add-button">ADD</div>
+	<!--<div class="background-fill"></div>-->
+<div class="container">
+	<div class="heading-container">
+		<div class="bold-tasks">Tasks</div>
+		<div class="lighter-lists">Lists</div>
+		<button class="add-symbol" >&#43;</button>
+		<div class="add-list">Add List</div>
+	</div>
+	<div class="task-list-container">
+		<div class="task-details-container">
+				<div class="task-name-container">
+					<div class="task-name">Trip to Paris</div>
+					<hr class="h-line">
+				</div>
+				<div class="task-completion">completed task</div>
+				<div class="task-pending">
+					<input type="checkbox" >
+					<label> Pending task</label>
+				</div>
 		</div>
+		<div class="task-details-container">
+				<div class="task-name-container">
+					<div class="task-name">My Todo list</div>
+					<hr class="h-line">
+				</div>
+				<div class="task-completion">completed task</div>
+				<div class="task-pending">
+					<input type="checkbox" >
+					<label> Pending task</label>
+				</div>
+		</div>
+		<div class="task-details-container">
+				<div class="task-name-container">
+					<div class="task-name">My Todo list</div>
+					<hr class="h-line">
+				</div>
+				<div class="task-completion">completed task</div>
+				<div class="task-pending">
+					<input type="checkbox" >
+					<label> Pending task</label>
+				</div>
+		</div>	
+	</div>
+</div>
+<div class="add-task-container">
+	<div class="new-list"> Add New List</div>
+		<input type="text">
+		<div class="add-button">ADD</div>
+</div>
 </body>
 </html>
