--- a/TO-DO-APP-page4.html
+++ b/TO-DO-APP-page4.html
@@ -4,18 +4,41 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<meta http-equiv="X-UA-Compatible", content="ie=edge">
-	<link rel="icon" href="./html.png">
-	<link rel="stylesheet" href="../Styles/Assignment2-page4.css">
-
-	
+	<link rel="stylesheet" href="../TO-DO-APP-UI/page4.css">
+	<link rel="icon" href="https://xd.adobe.com/static/images/xd_android_webclip_192-f68ab947e37c09acf69cea3122e60893bcc15cb4.png">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 	<title>ToDo List-UX</title>
 </head>
 <body>
-	<div class="background-fill"></div>
-		<div class="add-task-container">
-			<div class="new-list"> Add New List</div>
-			<input type="text">
-			<div class="add-button">ADD</div>
+<div class="container">
+	<div class="heading-box">
+		<div class="hline-left"><hr></div>
+		<h1 class="heading">Trip to Paris</h1>
+		<div class="hline-right"><hr></div>
+		<div class="back-button-box">
+			<button class="back-button">&#10229;</button>
+			<div class="back-button-text">Back</div>
 		</div>
+	</div>
+	<div class="task-list-container">
+		<div class="task-details-container">
+				<div class="task-name-container">
+					<div class="task-name">Trip to Paris</div>
+					<hr>
+					<div class="task-completion">completed task</div>
+				</div>
+				<div class="checkbox-pending">
+					<input type="checkbox">
+					<label> Pending task</label>
+				</div>
+				<div class="add-symbol">+</div>
+		</div>
+	</div>	
+</div>
+<div class="add-task-container">
+	<div class="new-list"> Add New List</div>
+		<input type="text">
+		<div class="add-button">ADD</div>
+</div>
 </body>
 </html>
