--- a/TO-DO-APP-page1.html
+++ b/TO-DO-APP-page1.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<meta http-equiv="X-UA-Compatible", content="ie=edge">
 	<link rel="stylesheet" href="../TO-DO-APP-UI/page1.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="icon" href="https://xd.adobe.com/static/images/xd_android_webclip_192-f68ab947e37c09acf69cea3122e60893bcc15cb4.png">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 	<title>ToDo List-UX</title>
@@ -14,7 +15,9 @@
 	<div class="heading-container">
 		<div class="bold-tasks">Tasks&nbsp; </div>
 		<div class="lighter-lists"> Lists</div>
-		<button class="add-symbol" >&#43;</button>
+		<button class="add-tasklist-btn">
+						<i class="fa fa-plus fa-custom" ></i>
+		</button>
 		<div class="add-list">Add List</div>
 	</div>
 	<div class="task-list-container">
@@ -28,16 +31,13 @@
 					<input type="checkbox" >
 					<label> Pending task</label>
 				</div>
-		</div>
-		<div class="task-details-container">
-				<div class="task-name-container">
-					<div class="task-name">My Todo list</div>
-					<hr class="h-line">
-				</div>
-				<div class="task-completion">completed task</div>
-				<div class="task-pending">
-					<input type="checkbox" >
-					<label> Pending task</label>
+				<div class="task-details-container-footer">
+					<button class="delete-task-btn">
+						<i class="fa fa-trash fa-custom"></i>
+					</button>
+					<button class="add-task-btn">
+						<i class="fa fa-plus fa-custom" ></i>
+					</button>
 				</div>
 		</div>
 		<div class="task-details-container">
@@ -49,8 +49,44 @@
 				<div class="task-pending">
 					<input type="checkbox" >
 					<label> Pending task</label>
+				</div>
+				<div class="task-details-container-footer">
+					<button class="delete-task-btn">
+						<i class="fa fa-trash fa-custom"></i>
+					</button>
+					<button class="add-task-btn">
+						<i class="fa fa-plus fa-custom" ></i>
+					</button>
+				</div>
+		</div>
+		<div class="task-details-container">
+				<div class="task-name-container">
+					<div class="task-name">My Todo list</div>
+					<hr class="h-line">
+				</div>
+				<div class="task-completion">completed task</div>
+				<div class="task-pending">
+					<input type="checkbox" >
+					<label> Pending task</label>
+				</div>
+				<div class="task-details-container-footer">
+					<button class="delete-task-btn">
+						<i class="fa fa-trash fa-custom"></i>
+					</button>
+					<button class="add-task-btn">
+						<i class="fa fa-plus fa-custom" ></i>
+					</button>
 				</div>
 		</div>	
+	</div>
 </div>
+<div class="add-task-container">
+		<div class="new-list"> Add New List</div>
+		<input type="text">
+		<div id="add-task"class="popup-button">ADD</div>
+		<div id="close" class="popup-button">CLOSE</div>
+</div>
+
+<script src="./to-do-app-ui.js"></script>
 </body>
 </html>
